fix overflow / grid issue, add github pages deploy config

--- a/src/assets/css/About.module.css
+++ b/src/assets/css/About.module.css
@@ -3,6 +3,35 @@
 	margin: 1rem;
 }
 
+.btn {
+	color: var(--clr-primary-5);
+	text-decoration: none;
+	font-weight: 600;
+	text-transform: capitalize;
+	letter-spacing: var(--spacing);
+	transition: var(--transition);
+	border-bottom: 2px solid var(--clr-primary-5);
+	padding-bottom: 0.25rem;
+	display: inline-block;
+	margin-top: 1rem;
+}
+.btn:hover {
+	color: var(--clr-primary-8);
+	border-color: var(--clr-primary-8);
+}
+
+/* XS Mobile adjustments */
+@media screen and (max-width: 375px) {
+	.about-img,
+	.about-info {
+		margin: 0.5rem;
+	}
+	.btn {
+		font-size: 0.8rem;
+		padding-bottom: 0.2rem;
+	}
+}
+
 @media screen and (min-width: 992px) {
 	.about-center {
 		display: grid;
