--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ Global Styles
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	max-width: 100%;
 }
 html {
 	scroll-behavior: smooth;
@@ -98,6 +99,34 @@ h4 {
 p {
 	margin-bottom: 1.25rem;
 	color: var(--clr-grey-5);
+}
+
+/* XS Mobile font adjustments (320px - 375px) */
+@media screen and (max-width: 375px) {
+	h1 {
+		font-size: 2.2rem;
+		line-height: 1.2;
+	}
+	h2 {
+		font-size: 1.6rem;
+		line-height: 1.3;
+	}
+	h3 {
+		font-size: 1.1rem;
+		line-height: 1.3;
+	}
+	h4 {
+		font-size: 0.8rem;
+	}
+	body {
+		font-size: 0.8rem;
+		line-height: 1.4;
+	}
+	p {
+		font-size: 0.8rem;
+		line-height: 1.4;
+		margin-bottom: 1rem;
+	}
 }
 @media screen and (min-width: 800px) {
 	h1 {
@@ -161,6 +190,20 @@ p {
 	width: 90vw;
 	margin: 0 auto;
 	max-width: 1170px;
+}
+
+/* XS Mobile section adjustments */
+@media screen and (max-width: 375px) {
+	.section {
+		padding: 3rem 0;
+	}
+	.section-title {
+		margin-bottom: 2.5rem;
+	}
+	.section-center {
+		width: 95vw;
+		padding: 0 0.5rem;
+	}
 }
 @media screen and (min-width: 992px) {
 	.section-center {
